Implement adding new products for user (#3)
* API definition transferred by SwaggerHub

* API definition transferred by SwaggerHub

* Begin signup implementation

* Push from SwaggerHub.

* API definition transferred by SwaggerHub

* API definition transferred by SwaggerHub

* API definition transferred by SwaggerHub

* API definition transferred by SwaggerHub

* API definition transferred by SwaggerHub

* API definition transferred by SwaggerHub

* Add basic functionality: login, signup

* API definition transferred by SwaggerHub

* Add roles management

* API definition transferred by SwaggerHub

* Push from SwaggerHub.

* API definition transferred by SwaggerHub

* Continue implementation of additional features

* Implement deleting products from users repository
