# src/main/java/com/pwr/faktury/controllers/SignupImpl.java
@@ -5,11 +5,11 @@ import java.util.List;
 import java.util.Set;
 
 import com.pwr.faktury.api.SignupApiDelegate;
-import com.pwr.faktury.model.ERole;
-import com.pwr.faktury.model.Role;
-import com.pwr.faktury.model.Roles;
+import com.pwr.faktury.models.ERole;
+import com.pwr.faktury.models.Role;
 import com.pwr.faktury.model.Signup;
-import com.pwr.faktury.model.User;
+import com.pwr.faktury.models.User;
+import com.pwr.faktury.models.adapters.ContractorAdapter;
 import com.pwr.faktury.repositories.RoleRepository;
 import com.pwr.faktury.repositories.UserRepository;
 import com.pwr.faktury.security.jwt.JwtUtils;
@@ -49,7 +49,7 @@ public class SignupImpl implements SignupApiDelegate {
         user.setPassword(encoder.encode(signup.getPassword()));
         user.setPersonal_data(signup.getCompany());
 
-        List<Roles> strRoles = signup.getRoles();
+        List<String> strRoles = signup.getRoles();
         Set<Role> roles = new HashSet<>();
         if (strRoles == null) {
             Role userRole = roleRepository.findByName(ERole.USER)
@@ -58,17 +58,15 @@ public class SignupImpl implements SignupApiDelegate {
         } else {
             strRoles.forEach(role -> {
                 switch (role) {
-                    case ADMIN:
+                    case "ADMIN":
                         Role adminRole = roleRepository.findByName(ERole.ADMIN)
                                 .orElseThrow(() -> new RuntimeException("Error: Role is not found."));
                         roles.add(adminRole);
-
                         break;
-                    case MODERATOR:
+                    case "MODERATOR":
                         Role modRole = roleRepository.findByName(ERole.MODERATOR)
                                 .orElseThrow(() -> new RuntimeException("Error: Role is not found."));
                         roles.add(modRole);
-
                         break;
                     default:
                         Role userRole = roleRepository.findByName(ERole.USER)
